# wide-but-small

./: .cookiecutter.json  .pre-commit-config.yaml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.rst  noxfile.py  pyproject.toml
docs/: conf.py  index.rst  reference.rst
src/widebutsmall/: __init__.py  __main__.py  data.py  feature_extraction.py  modelling.py  resample.py  select.py  utils.py
tests/: __init__.py  conftest.py  test_data.py  test_main.py  test_resample.py  test_select.py
